--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.chessexample.javafxdemo/com.chessexample.javafxdemo.HelloApplication
+                            <mainClass>com.chessexample.javafxdemo/com.chessexample.chessgraphics.ChessApp
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
